# simulation-env-for-shitcoins

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  README.md  SECURITY.md  TODO.md  requirements.txt  run_api.py  verify_optimizations.py
.claude/: settings.local.json
anipredicts/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  edge_detector.py  image_generator.py  main.py  polymarket_client.py  requirements.txt  test_post.py  twitter_client.py
anipredicts/config/: default.yaml
anipredicts/scripts/: debug_api.py  monitor.py  quick_scan.py  run_scanner.py  test_grok.py  test_twitter.py
docs/: generate_pdf.py  whitepaper.html  whitepaper.tex
examples/: autonomous_harness.py
experiments/: bear_market_stress_test.json  bear_stress_v2.json  index.json  market_analysis_final.json  run_results.json
llm_feedback/: __init__.py  adjustments.py  analyzer.py  ct_integration.py  feedback_loop.py  observer.py  token_evaluator.py
programs/hopium_staking/: Cargo.toml
programs/hopium_staking/src/: errors.rs  lib.rs
programs/hopium_staking/src/instructions/: complete_simulation.rs  emergency_withdraw.rs  mod.rs  release.rs  stake.rs  use_stake.rs
programs/hopium_staking/src/state/: mod.rs  stake_account.rs
simulation-env-for-shitcoins/: .env.example  CONTRIBUTING.md  README.md  requirements.txt
src/: __init__.py  cli.py
tests/: __init__.py  conftest.py  hopium_staking.ts  test_api.py  test_competition.py  test_data_handling.py  test_models.py  test_optimizations.py  test_personas.py  test_simulation.py
web/: package-lock.json  package.json
(+101 files in other folders)
