[package]
name = "hopium_staking"
version = "0.1.0"
description = "Hopium Lab staking program for simulation access"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hopium_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
constant_time_eq = "=0.3.1"
